--- a/Export_index/ViewModelExplorer2.cls
+++ b/Export_index/ViewModelExplorer2.cls
@@ -8,18 +8,47 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
 '@PredeclaredId
-'@Folder("index")
+'@Folder "Explorer2"
 Option Compare Database
 Option Explicit
+
+Public Event StartEditing()
+Public Event StopEditing()
+Public Event CancelEditing()
+
+Private Const ENTITY_PREFIX As String = "Entity#"
+Private Const ENTITYTYPE_PREFIX As String = "EntityType#"
 
 Private Type TViewModelExplorer2
     EntityID As Double
     entityTypeid As Double
     DetailTableName As String
     SearchCriteria As String
+    Events As Collection
+    Subform As Subform
+    CommitID As Double
+    IsEditing As Boolean
 End Type
 
 Private this As TViewModelExplorer2
+
+' Ctor
+Private Sub Class_Initialize()
+    ' TODO below is test env only. Handle unselcted/uninit entityTypeID properly
+    this.entityTypeid = 1
+    Set this.Events = New Collection
+    this.CommitID = 1
+End Sub
+
+' Properties
+Public Property Get IsEditing() As Boolean
+    IsEditing = this.IsEditing
+End Property
+
+'@Ignore MisleadingByRefParameter
+Public Property Set Subform(ByRef RHS As Subform)
+    Set this.Subform = RHS
+End Property
 
 Public Property Get EntityID() As Double
     EntityID = this.EntityID
@@ -66,7 +95,82 @@ Public Function GetRecordset() As Recordset
     Set GetRecordset = CurrentDb.OpenRecordset(GetSQL, dbOpenSnapshot, dbReadOnly)
 End Function
 
-Private Sub Class_Initialize()
-    ' TODO below is test env only. Handle unselcted/uninit entityTypeID properly
-    this.entityTypeid = 1
+' ---
+Public Function GetCollectionFromRecordset() As Collection
+    Dim rs As Recordset
+    Dim result As Collection
+    Dim ent As Explorer2Entity
+    
+    Set result = New Collection
+    Set rs = GetRecordset
+    
+    If Not rs.BOF And Not rs.EOF Then
+        Do While Not rs.EOF
+            Set ent = RecordToEntity(rs)
+            result.Add ent, ent.ID
+            rs.MoveNext
+        Loop
+    End If
+    
+    rs.Close
+    Set rs = Nothing
+    
+    Set GetCollectionFromRecordset = result
+End Function
+
+Private Function RecordToEntity(ByRef rs As Recordset) As Explorer2Entity
+    Set RecordToEntity = New Explorer2Entity
+    With RecordToEntity
+        .ID = (ENTITY_PREFIX & rs.fields("ID").Value)
+        .Entity = rs.fields("Entity").Value
+        .Parent = ENTITY_PREFIX & rs.fields("ParentFK").Value
+        .EntityType = ENTITYTYPE_PREFIX & rs.fields("EntityType").Value
+    End With
+End Function
+
+
+Public Function AddEvents(cb As CommandButton, State As String)
+    With New Explorer2EventCommandButton
+        Set .CommandButton = cb
+        Set .Context = Me
+        .State = State
+        this.Events.Add .Self
+    End With
+    'Debug.Print "AddEvents(" & cb.name & ", " & State & ")"
+End Function
+
+Public Sub HandleEvent(ByVal State As String)
+    'Debug.Print "HandleEvent(" & State & ")"
+    Select Case State
+        Case "EditNew"
+            DetailEditNew
+        Case "Save"
+            DetailSave
+        Case "ViewMany"
+            Explorer2DetailSubform.ViewMany this.Subform
+        Case "ViewOne"
+            Explorer2DetailSubform.ViewOne this.Subform
+    End Select
+End Sub
+
+Private Sub DetailSave()
+    RaiseEvent StopEditing
+    this.IsEditing = False
+    this.Subform.Requery
+    Explorer2DetailSubform.ViewOne this.Subform
+End Sub
+
+Private Sub DetailEditNew()
+    Dim frm As Form
+    
+    Explorer2DetailSubform.EditNew this.Subform
+    Set frm = this.Subform.Form
+    frm.Undo
+    
+    'DoCmd.GoToRecord acDataForm, frm.name, acNewRec
+    frm.controls("ValidUntil").Value = #12/31/9999#
+    frm.controls("CommitFK").Value = this.CommitID
+    
+    RaiseEvent StartEditing
+    this.IsEditing = False
 End Sub
